hotbox/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hotdesk
  labels:
    name: hotdesk
