hotbox/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: hotdesk
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
  - port: 80          # Service port
    targetPort: 80    # Container port
    nodePort: 30080   # Port on each node (30000-32767)
