hotbox/php-fpm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-fpm-service
  namespace: hotdesk
  labels:
    app: php-fpm
spec:
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    app: php-fpm
  type: ClusterIP
