hotbox/web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: hotdesk
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
  - port: 80
    targetPort: 80
